--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ npapi.log.bck
 highlight-coverage-peptide-chromosome-y.html
 isoform-mapper/testPropagationForVariantsOfAllEntries.log
 isoform-mapper/testPropagationForVariantsOfAllEntries.log.old
+tmp.xml
