Updating sonar properties for test coverage again

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,5 +4,5 @@ sonar.projectVersion=0.10.0
 sonar.sources=commons/src/main, core/src/main, etl-statement/src/main, isoform-mapper/src/main, rdf/src/main, security/src/main, solr/src/main, tasks/src/main, user/src/main, web/src/main
 sonar.binaries=commons/target, core/target, rdf/target, security/target, solr/target, tasks/target, user/target, web/target
 sonar.language=java
-sonar.tests=commons/src/test, core/src/test, etl-statement/src/test, isoform-mapper/src/test, rdf/src, security/src/test, solr/src/test, tasks/src/test, user/src/test, web/src/test
+sonar.tests=commons/src/test, core/src/test, etl-statement/src/test, isoform-mapper/src/test, rdf/src, solr/src/test, user/src/test, web/src/test
 sonar.sourceEncoding=UTF-8
