Disable jacoco by default

--- a/pom.xml
+++ b/pom.xml
@@ -390,7 +390,7 @@
 		<profile>
 			<id>sonar-coverage</id>
 			<activation>
-				<activeByDefault>true</activeByDefault>
+				<activeByDefault>false</activeByDefault>
 			</activation>
 			<build>
 				<pluginManagement>
