--- a/pom.xml
+++ b/pom.xml
@@ -408,25 +408,12 @@
 						<artifactId>jacoco-maven-plugin</artifactId>
 						<configuration>
 							<append>true</append>
+							<destFile>${sonar.jacoco.reportPath}</destFile>
 						</configuration>
 						<executions>
 							<execution>
-								<id>agent-for-ut</id>
 								<goals>
 									<goal>prepare-agent</goal>
-								</goals>
-							</execution>
-							<execution>
-								<id>agent-for-it</id>
-								<goals>
-									<goal>prepare-agent-integration</goal>
-								</goals>
-							</execution>
-							<execution>
-								<id>jacoco-site</id>
-								<phase>verify</phase>
-								<goals>
-									<goal>report</goal>
 								</goals>
 							</execution>
 						</executions>
