--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ highlight-coverage-peptide-chromosome-y.html
 isoform-mapper/testPropagationForVariantsOfAllEntries.log
 isoform-mapper/testPropagationForVariantsOfAllEntries.log.old
 tmp.xml
+all-genes.tsv
