--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=nextprot-api-dev
 sonar.projectName=nextprot api dev
 sonar.projectVersion=0.10.0
-sonar.sources=commons/src/main, core/src/main, etl-statement/src/main, isoform-mapper/src/main, rdf/src/main, security/src/main, solr/src/main, tasks/src/main, user/src/main, web/src/main
+sonar.sources=commons/src/main/java, core/src/main/java, etl-statement/src/main/java, isoform-mapper/src/main/java, rdf/src/main/java, security/src/main/java, solr/src/main/java, tasks/src/main/java, user/src/main/java, web/src/main/java
 sonar.binaries=commons/target, core/target, rdf/target, security/target, solr/target, tasks/target, user/target, web/target
-sonar.tests=commons/src/test, core/src/test, etl-statement/src/test, isoform-mapper/src/test, rdf/src/test, solr/src/test, user/src/test, web/src/test
+sonar.tests=commons/src/test/java, core/src/test/java, etl-statement/src/test/java, isoform-mapper/src/test/java, rdf/src/test/java, solr/src/test/java, user/src/test/java, web/src/test/java
