--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,5 +2,5 @@ sonar.projectKey=nextprot-api-dev
 sonar.projectName=nextprot api dev
 sonar.projectVersion=0.10.0
 sonar.sources=commons/src/main/java, core/src/main/java, etl-statement/src/main/java, isoform-mapper/src/main/java, rdf/src/main/java, security/src/main/java, solr/src/main/java, tasks/src/main/java, user/src/main/java, web/src/main/java
-sonar.binaries=commons/target, core/target, rdf/target, security/target, solr/target, tasks/target, user/target, web/target
+sonar.java.binaries=commons/target/classes, core/target/classes, rdf/target/classes, security/target/classes, solr/target/classes, tasks/target/classes, user/target/classes, web/target/classes
 sonar.tests=commons/src/test/java, core/src/test/java, etl-statement/src/test/java, isoform-mapper/src/test/java, rdf/src/test/java, solr/src/test/java, user/src/test/java, web/src/test/java
