--- a/pom.xml
+++ b/pom.xml
@@ -367,6 +367,36 @@
                 </configuration>
             </plugin>
 
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-compiler-plugin</artifactId>
+		<version>2.5.1</version>
+		<configuration>
+		    <source>1.7</source>
+		    <target>1.7</target>
+		</configuration>
+	    </plugin>
+	    <plugin>
+		<groupId>org.jacoco</groupId>
+		<artifactId>jacoco-maven-plugin</artifactId>
+		<version>0.7.6.201602180812</version>
+		<executions>
+		    <execution>
+			<goals>
+			    <goal>prepare-agent</goal>
+			</goals>
+		    </execution>
+		    <execution>
+			<id>report</id>
+			<phase>prepare-package</phase>
+			<goals>
+			    <goal>report</goal>
+			</goals>
+		    </execution>
+		</executions>
+	    </plugin>
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
