cleaned-up sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,13 @@
-sonar.projectKey=nextprot-api-dev
-sonar.projectName=nextprot api dev
+sonar.projectKey=nextprot-api
+sonar.projectName=nextprot api
 sonar.projectVersion=0.10.0
-sonar.sources=commons/src/main/java, core/src/main/java, etl-statement/src/main/java, isoform-mapper/src/main/java, rdf/src/main/java, security/src/main/java, solr/src/main/java, tasks/src/main/java, user/src/main/java, web/src/main/java
-sonar.java.binaries=commons/target/classes, core/target/classes, rdf/target/classes, security/target/classes, solr/target/classes, tasks/target/classes, user/target/classes, web/target/classes
-sonar.tests=commons/src/test/java, core/src/test/java, etl-statement/src/test/java, isoform-mapper/src/test/java, rdf/src/test/java, solr/src/test/java, user/src/test/java, web/src/test/java
+
+# Set modules IDs
+sonar.modules=commons,core,etl-statement
+
+# Modules inherit properties set at parent level
+sonar.sources=src/main/java
+sonar.sourceEncoding=UTF-8
+sonar.language=java
+
+
