adding other modules to sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectName=nextprot api
 sonar.projectVersion=0.10.0
 
 # Set modules IDs
-sonar.modules=commons,core,etl-statement
+sonar.modules=commons,core,user,etl-statement,rdf,solr,security,isoform-mapper,web,tasks
 
 # Modules inherit properties set at parent level
 sonar.sources=src/main/java
