Moving test classes in proper test location

--- a/pom.xml
+++ b/pom.xml
@@ -287,6 +287,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
+            <scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.jayway.jsonpath</groupId>
@@ -302,6 +303,7 @@
 			<groupId>org.dbunit</groupId>
 			<artifactId>dbunit</artifactId>
 			<version>2.4.9</version>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- manage git info -->
