--- a/pom.xml
+++ b/pom.xml
@@ -354,27 +354,6 @@
                 </configuration>
             </plugin>
 
-	    <plugin>
-		<groupId>org.jacoco</groupId>
-		<artifactId>jacoco-maven-plugin</artifactId>
-		<version>0.7.6.201602180812</version>
-		<executions>
-		    <execution>
-			<goals>
-			    <goal>prepare-agent</goal>
-			</goals>
-		    </execution>
-		    <execution>
-			<id>report</id>
-			<phase>prepare-package</phase>
-			<goals>
-			    <goal>report</goal>
-			</goals>
-		    </execution>
-		</executions>
-	    </plugin>
-
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -394,5 +373,39 @@
             </plugin>
         </plugins>
     </build>
+
+	<profiles>
+	<profile>
+	    <id>coverage-per-test</id>
+	    <build>
+		<plugins>
+		    <plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<!-- Minimal supported version is 2.4 -->
+			<version>2.13</version>
+			<configuration>
+			    <properties>
+				<property>
+				    <name>listener</name>
+				    <value>org.sonar.java.jacoco.JUnitListener</value>
+				</property>
+			    </properties>
+			</configuration>
+		    </plugin>
+		</plugins>
+	    </build>
+
+	    <dependencies>
+		<dependency>
+		    <groupId>org.sonarsource.java</groupId>
+		    <artifactId>sonar-jacoco-listeners</artifactId>
+		    <version>3.8</version>
+		    <scope>test</scope>
+		</dependency>
+	    </dependencies>
+	</profile>
+    </profiles>
+
 
 </project>
