testing out Google Analytics tracking code

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -43,7 +43,18 @@
         <param-value>pro,cache,security</param-value>
     </context-param>
 
-    <!-- Adds etag filter for entry 	-->
+    <!-- Adds google analytics filter-->
+
+    <!-- Sends hits to google analytics -->
+    <filter>
+        <filter-name>ga</filter-name>
+        <filter-class>org.nextprot.api.web.GoogleAnalyticsFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>ga</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     
 	<filter>
 	   <filter-name>etagFilter</filter-name>
