--- a/web/pom.xml
+++ b/web/pom.xml
@@ -146,9 +146,9 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
+ 			    <groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>8.1.16.v20140903</version>
+				<version>9.3.14.v20161028</version>
 				<configuration>
 					<!-- <jettyXml>src/etc/jetty-jmx.xml</jettyXml> -->
 					<!-- <scanIntervalSeconds>10</scanIntervalSeconds> -->
@@ -165,26 +165,6 @@
 						<version>1.2.16</version>
 					</dependency>
 				</dependencies>
-				<executions>
-					<execution>
-						<id>start-jetty</id>
-						<phase>pre-integration-test</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-							<scanIntervalSeconds>0</scanIntervalSeconds>
-							<daemon>true</daemon>
-						</configuration>
-					</execution>
-					<execution>
-						<id>stop-jetty</id>
-						<phase>post-integration-test</phase>
-						<goals>
-							<goal>stop</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 			<plugin>
 				<artifactId>exec-maven-plugin</artifactId>
