--- a/pom.xml
+++ b/pom.xml
@@ -61,13 +61,13 @@
 		<dependency>
 			<groupId>org.nextprot</groupId>
 			<artifactId>nextprot-commons</artifactId>
-			<version>LATEST</version>
+			<version>RELEASE</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.nextprot</groupId>
 			<artifactId>nextprot-queries</artifactId>
-			<version>LATEST</version>
+			<version>RELEASE</version>
 		</dependency>
 
 		<!--
