--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
 		<module>web</module>
 		<module>test-diff-rdf-db</module>
 		<module>tasks</module>
+		<module>blast</module>
 	</modules>
 
 	<dependencies>
