Add blastp properties

--- a/commons/src/main/resources/application-unit.properties
+++ b/commons/src/main/resources/application-unit.properties
@@ -29,3 +29,7 @@ github.accesstoken=undefined
 github.doc.branch=develop
 
 pepx.url=undefined
+
+#Blast parameters
+blastp.bin=/work/devtools/blastp
+blastp.db=/work/npdata/blast.db
