Add new property 'makeblastdb.bin'

--- a/commons/src/main/resources/application-unit.properties
+++ b/commons/src/main/resources/application-unit.properties
@@ -32,4 +32,5 @@ pepx.url=undefined
 
 #Blast parameters
 blastp.bin=/work/devtools/blastp
-blastp.db=/work/npdata/blast.db
+blastp.db=/work/npdata/blast.db/nextprot
+makeblastdb.bin=/work/devtools/makeblastdb
