Adding blast properties

--- a/commons/src/main/resources/application-dev.properties
+++ b/commons/src/main/resources/application-dev.properties
@@ -57,3 +57,8 @@ auth0.clientDomain=nextprot.auth0.com
 #Github token set only for pro env
 github.accesstoken=undefined
 github.doc.branch=develop
+
+#Blast parameters
+blastp.bin=/work/devtools/blastp
+blastp.db=/work/npdata/blast.db/nextprot
+makeblastdb.bin=/work/devtools/makeblastdb
