--- a/commons/src/main/resources/application-dev.properties
+++ b/commons/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 #Database for data
 db.data.driver=org.postgresql.Driver
-db.data.url=jdbc:postgresql://crick:5432/np_20160825
+db.data.url=jdbc:postgresql://crick:5432/np_20170208
 #db.data.url=jdbc:postgresql://kant:5432/nextprot
 #db.data.url=jdbc:postgresql://uat-web1:5432/np_annot_uat
 db.data.username=postgres
@@ -18,7 +18,7 @@ db.user.password=postgres
 
 #Database for statements
 db.statements.driver=org.postgresql.Driver
-db.statements.url=jdbc:postgresql://crick:5432/nxflat
+db.statements.url=jdbc:postgresql://crick:5432/nxflat_20170208
 db.statements.username=postgres
 db.statements.password=postgres
 
