--- a/commons/src/main/resources/application-dev.properties
+++ b/commons/src/main/resources/application-dev.properties
@@ -6,9 +6,10 @@ db.data.url=jdbc:postgresql://crick:5432/np_20170208
 db.data.username=postgres
 db.data.password=postgres
 
-db.data.maxPoolSize=6
+#when maxpoolsize=6 and initialPoolSize=3 => org.springframework.jdbc.CannotGetJdbcConnectionException: Could not get JDBC Connection in lots of unit tests !!!
+db.data.maxPoolSize=1
 db.data.minPoolSize=1
-db.data.initialPoolSize=3
+db.data.initialPoolSize=1
 
 #Database for users
 db.user.driver=org.postgresql.Driver
