--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,15 @@
 
     <display-name>nextprot-api</display-name>
 
+    <filter>
+        <filter-name>sparqlCacheFilter</filter-name>
+        <filter-class>org.nextprot.api.web.filter.SparqlProxyCachingFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>sparqlCacheFilter</filter-name>
+        <url-pattern>/sparql/*</url-pattern>
+    </filter-mapping>
+
     <!--  Setting spring mvc front controller DispatcherServlet -->
     <servlet>
         <servlet-name>nextprotApi</servlet-name>
@@ -43,8 +52,9 @@
         <param-value>pro,cache,security</param-value>
     </context-param>
 
-    <!-- Adds google analytics filter-->
 
+
+    <!-- Adds google analytics filter-->
     <!-- Sends hits to google analytics -->
     <filter>
         <filter-name>ga</filter-name>
@@ -55,7 +65,7 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    
+
 	<filter>
 	   <filter-name>etagFilter</filter-name>
 	   <filter-class>org.springframework.web.filter.ShallowEtagHeaderFilter</filter-class>
