--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ isoform-mapper/testPropagationForVariantsOfAllEntries.log
 isoform-mapper/testPropagationForVariantsOfAllEntries.log.old
 tmp.xml
 all-genes.tsv
+/core/highlight-coverage-peptide-chromosome-y.html
