--- a/core/pom.xml
+++ b/core/pom.xml
@@ -49,6 +49,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>net.sf.trove4j</groupId>
+			<artifactId>trove4j</artifactId>
+			<version>3.0.3</version>
+		</dependency>
 
 	</dependencies>
 
