--- a/core/pom.xml
+++ b/core/pom.xml
@@ -84,7 +84,7 @@
 									<resource>META-INF/spring.schemas</resource>
 								</transformer>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>org.nextprot.api.core.app.ExperimentalContextDictAnalyserApp</mainClass>
+									<mainClass>org.nextprot.api.core.app.ExperimentalContextDictAnalyserTask</mainClass>
 								</transformer>
 							</transformers>
 							<filters>
@@ -115,7 +115,7 @@
 									<resource>META-INF/spring.schemas</resource>
 								</transformer>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>org.nextprot.api.core.app.daganalyser.OntologyDAGAnalyserApp</mainClass>
+									<mainClass>org.nextprot.api.core.app.daganalyser.OntologyDAGAnalyserTask</mainClass>
 								</transformer>
 							</transformers>
 							<filters>
@@ -146,7 +146,7 @@
 									<resource>META-INF/spring.schemas</resource>
 								</transformer>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>org.nextprot.api.core.app.dbxrefanalyser.DbXrefAnalyserApp</mainClass>
+									<mainClass>org.nextprot.api.core.app.dbxrefanalyser.DbXrefAnalyserTask</mainClass>
 								</transformer>
 							</transformers>
 							<filters>
