--- a/commons/src/main/resources/application-unit.properties
+++ b/commons/src/main/resources/application-unit.properties
@@ -1,7 +1,13 @@
-db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://crick:5432/np_unit
-db.username=postgres
-db.password=postgres
+#Database for data
+db.data.driver=org.postgresql.Driver
+db.data.url=jdbc:postgresql://crick:5432/np_unit
+db.data.username=postgres
+db.data.password=postgres
+
+#when maxpoolsize=6 and initialPoolSize=3 => org.springframework.jdbc.CannotGetJdbcConnectionException: Could not get JDBC Connection in lots of unit tests !!!
+db.data.maxPoolSize=3
+db.data.minPoolSize=1
+db.data.initialPoolSize=1
 
 #Some other properties
 sparql.url=http://kant:8890/sparql
