--- a/env/preprod-nextprot-application.properties
+++ b/env/preprod-nextprot-application.properties
@@ -1,8 +1,6 @@
 #database for data
 db.data.driver=org.postgresql.Driver
-#db.data.url=jdbc:postgresql://kant:5432/nextprot
-#db.data.url=jdbc:postgresql://crick:5432/np_20170413
-db.data.url=jdbc:postgresql://kant.isb-sib.ch:5432/nextprot_20171113
+db.data.url=jdbc:postgresql://kant.isb-sib.ch:5432/nextprot_preprod
 db.data.username=postgres
 db.data.password=postgres
 
@@ -21,7 +19,7 @@ db.user.minPoolSize=1
 db.user.initialPoolSize=1
 
 db.statements.driver=org.postgresql.Driver
-db.statements.url=jdbc:postgresql://crick.isb-sib.ch:5432/nxflat
+db.statements.url=jdbc:postgresql://crick.isb-sib.ch:5432/nxflatempty
 db.statements.username=postgres
 db.statements.password=postgres
 
