adding restore on kant

--- a/docker-env/preprod-nextprot-application.properties
+++ b/docker-env/preprod-nextprot-application.properties
@@ -10,7 +10,7 @@ db.data.initialPoolSize=1
 
 #Database for users
 db.user.driver=org.postgresql.Driver
-db.user.url=jdbc:postgresql://crick.isb-sib.ch:5432/np_users
+db.user.url=jdbc:postgresql://kant.isb-sib.ch:5432/np_users
 db.user.username=postgres
 db.user.password=postgres
 
@@ -19,7 +19,7 @@ db.user.minPoolSize=1
 db.user.initialPoolSize=1
 
 db.statements.driver=org.postgresql.Driver
-db.statements.url=jdbc:postgresql://crick.isb-sib.ch:5432/nxflatempty
+db.statements.url=jdbc:postgresql://kant.isb-sib.ch:5432/nxflatempty
 db.statements.username=postgres
 db.statements.password=postgres
 
