--- a/docker-env/preprod-nextprot-application.properties
+++ b/docker-env/preprod-nextprot-application.properties
@@ -35,5 +35,26 @@ sparql.timeout=360000
 sparql.url=http://kant.isb-sib.ch:8890/sparql
 #Jena
 #sparql.url=http://kant:3030/np/query?output=json
-#BigData
-#sparql.url=http://kant:4040/bigdata/sparql?output=json
+
+
+
+pepx.url=http://crick.isb-sib.ch/pepx/cgi-bin/pepx
+
+#SOLR database
+solr.url=http://crick:8983/solr
+
+#Client id and secret for auth0
+auth0.clientId=CLIENT_ID_JUST_FOR_DEV
+auth0.clientSecret=WU9VUl9TRUNSRVRfSUQ=
+#Domain is not used for the moment, but may be used to access profile based on access token
+auth0.clientDomain=nextprot.auth0.com
+
+#Github token set only for pro env
+github.accesstoken=undefined
+github.doc.branch=develop
+
+#Blast parameters
+blastp.bin=/work/devtools/blastp
+blastp.db=/work/npdata/blast.db/nextprot
+makeblastdb.bin=/work/devtools/makeblastdb
+
