adding users table

--- a/docker-env/preprod-nextprot-application.properties
+++ b/docker-env/preprod-nextprot-application.properties
@@ -10,7 +10,7 @@ db.data.initialPoolSize=1
 
 #Database for users
 db.user.driver=org.postgresql.Driver
-db.user.url=jdbc:postgresql://kant.isb-sib.ch:5432/np_users
+db.user.url=jdbc:postgresql://crick.isb-sib.ch:5432/np_users
 db.user.username=postgres
 db.user.password=postgres
 
