--- a/pom.xml
+++ b/pom.xml
@@ -386,6 +386,7 @@
                         </manifest>
 						<manifestEntries>
 							<gitCommitCountFile>git-commit-count.txt</gitCommitCountFile>
+                            <gitBranchNameFile>git-branch-name.txt</gitBranchNameFile>
 						</manifestEntries>
                     </archive>
                 </configuration>
