Comment project version as jenkins should get the project.version from pom.xml

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 sonar.projectKey=nextprot-api
 sonar.projectName=nextprot api
-sonar.projectVersion=0.10.0
+#sonar.projectVersion=0.10.0
 
 # Set modules IDs
-sonar.modules=commons,core,user,etl-statement,rdf,solr,security,isoform-mapper,web,tasks
+sonar.modules=blast,commons,core,etl-statement,isoform-mapper,rdf,security,solr,tasks,user,web
 
 # Modules inherit properties set at parent level
 sonar.sources=src/main/java
