--- a/user/pom.xml
+++ b/user/pom.xml
@@ -29,6 +29,11 @@
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.nextprot</groupId>
+			<artifactId>nextprot-api-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 
 	</dependencies>
 
