--- a/isoform-mapper/pom.xml
+++ b/isoform-mapper/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.nextprot</groupId>
 		<artifactId>nextprot-api-master</artifactId>
-		<version>2.15.3</version>
+		<version>2.15.4-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
