--- a/security/pom.xml
+++ b/security/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>nextprot-api-master</artifactId>
 		<groupId>org.nextprot</groupId>
-        <version>2.16.1</version>
+        <version>2.16.2-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
