--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>nextprot-api-master</artifactId>
 		<groupId>org.nextprot</groupId>
-		<version>2.16.2-SNAPSHOT</version>
+		<version>2.16.2</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
